--- a/contacto.html
+++ b/contacto.html
@@ -5,10 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/style.css">
+    <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
+
     <title>CONTACTO</title>
     <link rel="shortcut icon" href="img/logo.png">git branch -M main
 </head>
 <body>
+    <body>
     <header>
         <h1 class="block">AnimeNS</h1>
         <!-- Menu de navegacion -->
