Contenido en figuras

--- a/contacto.html
+++ b/contacto.html
@@ -22,7 +22,7 @@
                   <li>
                       <a href="./index.html">INICIO</a>
                   </li>
-                  <li> <a href="./anime.html">ANIME:</a>
+                  <li> <a href="./anime.html">ANIME</a>
                       <!-- ordererdlist : lista ordenada -->
                       <ol>
                           <li>NOTICAS</li>
