--- a/contacto.html
+++ b/contacto.html
@@ -8,37 +8,33 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
 
     <title>CONTACTO</title>
-    <link rel="shortcut icon" href="img/logo.png">git branch -M main
+    <link rel="shortcut icon" href="img/logo.png">
 </head>
 <body>
-    <body>
-    <header>
-        <h1 class="block">AnimeNS</h1>
-        <!-- Menu de navegacion -->
-        <nav >
-  <!-- unordered list:lista no ordenada -->
-              <ul class="menu">
-                  <!-- Lista de items -->
-                  <li>
-                      <a href="./index.html">INICIO</a>
-                  </li>
-                  <li> <a href="./anime.html">ANIME</a>
-                      <!-- ordererdlist : lista ordenada -->
-                      <ol>
-                          <li>NOTICAS</li>
-                          <li>RESEÑAS</li>
-                          <li>TRAILERS</li>
-                      </ol>
-                  </li>
-                  <li> <a href="./manga.html">MANGA</a></li>
-                  <li> <a href="./figuras.html">FIGURAS</a></li>
-                  <li>
-                      <!-- a=Anchor : ancla hiperviculo de referecia -->
-                      <a href="./contacto.html">CONTACTO</a>
-                  </li>
-              </ul>
-        </nav>
-    </header>
+
+    <div class="container">
+        <header class="header">
+            <h1 class="block">AnimeNS</h1>
+                      <!-- Menu de navegacion -->
+            <nav class="nav">
+      <!-- unordered list:lista no ordenada -->
+                  <ul class="menu">
+                      <!-- Lista de items -->
+                      <li>
+                          <a href="./index.html">INICIO</a></li>
+                      <li> <a href="./anime.html">ANIME</a>
+                          <!-- ordererdlist : lista ordenada -->
+                      
+                      </li>
+                      <li> <a href="./manga.html">MANGA</a></li>
+                      <li> <a href="./figuras.html">FIGURAS</a></li>
+                      <li>
+                          <!-- a=Anchor : ancla hiperviculo de referecia -->
+                          <a href="./contacto.html">CONTACTO</a>
+                      </li>
+                  </ul>
+            </nav>
+        </header>
     <main class="Contacto">
         <!-- Get: informacion no sensible | post: informacion sensible -->
         <form action="#" method="get">
@@ -92,5 +88,6 @@
             <li>Twitter</li>
         </ul>
     </footer>
+</div>
 </body>
 </html>
