--- a/figuras.html
+++ b/figuras.html
@@ -11,33 +11,29 @@
     <link rel="shortcut icon" href="img/logo.png">
 </head>
 <body>
-    <header class="header">
-        <h1 class="block">AnimeNS</h1>
-        <!-- Menu de navegacion -->
-        <nav class="nav">
-  <!-- unordered list:lista no ordenada -->
-              <ul class="menu">
-                  <!-- Lista de items -->
-                  <li>
-                      <a href="./index.html">INICIO</a>
-                  </li>
-                  <li> <a href="./anime.html">ANIME</a>
-                      <!-- ordererdlist : lista ordenada -->
-                      <ol>
-                          <li>NOTICAS</li>
-                          <li>RESEÑAS</li>
-                          <li>TRAILERS</li>
-                      </ol>
-                  </li>
-                  <li> <a href="./manga.html">MANGA</a></li>
-                  <li> <a href="./figuras.html">FIGURAS</a></li>
-                  <li>
-                      <!-- a=Anchor : ancla hiperviculo de referecia -->
-                      <a href="./contacto.html">CONTACTO</a>
-                  </li>
-              </ul>
-        </nav>
-    </header>
+    <div class="container">
+        <header class="header">
+            <h1 class="block">AnimeNS</h1>
+                      <!-- Menu de navegacion -->
+            <nav class="nav">
+      <!-- unordered list:lista no ordenada -->
+                  <ul class="menu">
+                      <!-- Lista de items -->
+                      <li>
+                          <a href="./index.html">INICIO</a></li>
+                      <li> <a href="./anime.html">ANIME</a>
+                          <!-- ordererdlist : lista ordenada -->
+                      
+                      </li>
+                      <li> <a href="./manga.html">MANGA</a></li>
+                      <li> <a href="./figuras.html">FIGURAS</a></li>
+                      <li>
+                          <!-- a=Anchor : ancla hiperviculo de referecia -->
+                          <a href="./contacto.html">CONTACTO</a>
+                      </li>
+                  </ul>
+            </nav>
+        </header>
     <section class="section">
         <h2>Good Smile Company nos sorprende al presentar una edición especial limitada de la Nendoroid que le dedica a Kirby para celebrar el 30 aniversario de la saga de videojuegos Kirby. </h2>
             <div>
@@ -78,5 +74,6 @@
             <li>Twitter</li>
         </ul>
     </footer>
+</div>
 </body>
 </html>
