--- a/index.html
+++ b/index.html
@@ -13,10 +13,11 @@
 
 <body>
     <!-- control + k control+ c para hacer un comrtentario-->
-  <header class=>
+    <div class="container">
+  <header class="header">
       <h1 class="block">AnimeNS</h1>
                 <!-- Menu de navegacion -->
-      <nav>
+      <nav class="nav">
 <!-- unordered list:lista no ordenada -->
             <ul class="menu">
                 <!-- Lista de items -->
@@ -24,11 +25,7 @@
                     <a href="./index.html">INICIO</a></li>
                 <li> <a href="./anime.html">ANIME</a>
                     <!-- ordererdlist : lista ordenada -->
-                    <ol>
-                        <li>NOTICAS</li>
-                        <li>RESEÑAS</li>
-                        <li>TRAILERS</li>
-                    </ol>
+                
                 </li>
                 <li> <a href="./manga.html">MANGA</a></li>
                 <li> <a href="./figuras.html">FIGURAS</a></li>
@@ -59,27 +56,11 @@
 
     </div>
 <!-- TABLAS -->
-    <table  border="10" cellpadding="5" cellspacing="2">
-        <!-- Table Row : fila de tabla -->
-        <tr>
-            <!-- TAble header :titulo de tabla -->
-            <th class="tituloTabla">NOTICIAS</th>
-            <th class="tituloTabla">RESEÑAS</th>
-            <th class="tituloTabla">TRAILERS</th>
-        </tr>
-        <tr>
-            <!-- Table Data : datos de tabla -->
-            <td id="datosTabla">1 nuevo animne</td>
-            <td>10\10 tokyo ghoul</td>
-            <td>Nuevo trailer</td>
-        </tr>
-        <tr>
-            <td>Filtracion de snk temp 50</td>
-            <td>Snk el mejor manga</td>
-            <td>Se filtra nuevo trailer</td>
-        </tr>
-    </table>
+   
+    
   </main>
+  <aside class="aside">
+</aside>
   <!-- FOTTER : PIE DE PAGINA -->
   <footer class="footer">
       <ol>
@@ -90,5 +71,6 @@
           <li>Twitter</li>
       </ol>
   </footer>
+</div>
 </body>
 </html>
