--- a/manga.html
+++ b/manga.html
@@ -12,36 +12,28 @@
 </head>
 <body>
     <div class="container">
-    <nav class="nav">
-    </nav>
-        
-    <header class="header">
-        <h1 class="block">AnimeNS</h1>
-        <!-- Menu de navegacion -->
-        <nav class="nav">
-  <!-- unordered list:lista no ordenada -->
-              <ul class="menu">
-                  <!-- Lista de items -->
-                  <li>
-                      <a href="./index.html">INICIO</a>
-                  </li>
-                  <li> <a href="./anime.html">ANIME</a>
-                      <!-- ordererdlist : lista ordenada -->
-                      <ol>
-                          <li>NOTICAS</li>
-                          <li>RESEÑAS</li>
-                          <li>TRAILERS</li>
-                      </ol>
-                  </li>
-                  <li> <a href="./manga.html">MANGA</a></li>
-                  <li> <a href="./figuras.html">FIGURAS</a></li>
-                  <li>
-                      <!-- a=Anchor : ancla hiperviculo de referecia -->
-                      <a href="./contacto.html">CONTACTO</a>
-                  </li>
-              </ul>
-        </nav>
-    </header>
+        <header class="header">
+            <h1 class="block">AnimeNS</h1>
+                      <!-- Menu de navegacion -->
+            <nav class="nav">
+      <!-- unordered list:lista no ordenada -->
+                  <ul class="menu">
+                      <!-- Lista de items -->
+                      <li>
+                          <a href="./index.html">INICIO</a></li>
+                      <li> <a href="./anime.html">ANIME</a>
+                          <!-- ordererdlist : lista ordenada -->
+                      
+                      </li>
+                      <li> <a href="./manga.html">MANGA</a></li>
+                      <li> <a href="./figuras.html">FIGURAS</a></li>
+                      <li>
+                          <!-- a=Anchor : ancla hiperviculo de referecia -->
+                          <a href="./contacto.html">CONTACTO</a>
+                      </li>
+                  </ul>
+            </nav>
+        </header>
     <section class="section">
         <h2>'Berserk' no ha llegado a su final: el manga de Kentaro Miura continuará tras su muerte</h2>
             <div>
