--- a/contacto.html
+++ b/contacto.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./css/style.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
 
-    <title>CONTACTO</title>
+    <title>AnimeNS | CONTACTO</title>
     <link rel="shortcut icon" href="img/logo.png">
 </head>
 <body>
