--- a/manga.html
+++ b/manga.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./css/style.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
 
-    <title>MANGA</title>
+    <title>AnimeNS | MANGA</title>
     <link rel="shortcut icon" href="img/logo.png">
 </head>
 <body>
