--- a/anime.html
+++ b/anime.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keywords" content="series, otaku, noticias, anime, AnimeNS,">
+    <meta name="description" content="Todas las noticias acerca del mundo del anime y del manga">
     <link rel="stylesheet" href="./css/style.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
 
@@ -22,7 +23,7 @@
                       <!-- Lista de items -->
                       <li>
                           <a href="./index.html">INICIO</a></li>
-                      <li> <a href="./anime.html">ANIME</a>
+                      <li> <a href="anime.html">ANIME</a>
                           <!-- ordererdlist : lista ordenada -->
                       
                       </li>
