--- a/anime.html
+++ b/anime.html
@@ -36,7 +36,10 @@
                   </ul>
             </nav>
         </header>
-    
+<nav class="box">
+    <p>'Berserk' no ha llegado a su final: el manga de Kentaro Miura continuará tras su muerte</p>
+
+</nav>
     <aside class="aside">
     </aside>
     <footer class="footer">
