--- a/manga.html
+++ b/manga.html
@@ -35,6 +35,10 @@
                       </li>
                   </ul>
             </nav>
+            <div class=".box">
+
+
+            </div>
         </header>
     <section class="section">
         <h2>'Berserk' no ha llegado a su final: el manga de Kentaro Miura continuará tras su muerte</h2>
