--- a/contacto.html
+++ b/contacto.html
@@ -16,7 +16,10 @@
 
     <div class="container">
         <header class="header">
-            <h1 class="block">AnimeNS</h1>
+            
+            <h1 class="block"><a href="./index.html">
+                <img src="./img/animeNS.png" alt=""></a>
+              </h1>
                    
             <nav class="nav">
 
