--- a/figuras.html
+++ b/figuras.html
@@ -16,7 +16,9 @@
 <body>
     <div class="container">
         <header class="header">
-            <h1 class="block">AnimeNS</h1>
+            <h1 class="block"><a href="./index.html">
+                <img src="./img/animeNS.png" alt=""></a>
+              </h1>
                       <!-- Menu de navegacion -->
             <nav class="nav">
       <!-- unordered list:lista no ordenada -->
